Fix for focus on visibility-hidden class

--- a/assets/source/sass/trumps/_trumps.visually-hidden.scss
+++ b/assets/source/sass/trumps/_trumps.visually-hidden.scss
@@ -2,7 +2,7 @@
   @include visually-hidden;
 }
 
-.visually-hidden--focusable:active,
-.visually-hidden--focusable:focus {
+.visually-hidden--focusable,
+.visually-hidden--focusable {
   @include visually-hidden--focusable;
 }
